--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "githuburl",
   "version": "0.1.0",
-  "description": "githuburl",
+  "description": "Parse a github repo url into an object of repo information and switch to several types of clone URL. ",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
+  "keywords": [
+    "github",
+    "repo",
+    "object",
+    "url",
+    "ssh",
+    "git",
+    "https",
+    "user"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:kaelzhang/node-githuburl.git"
@@ -13,7 +23,7 @@
   "keywords": [
     "githuburl"
   ],
-  "engines": { 
+  "engines": {
     "node": ">=0.8.0"
   },
   "author": "kael",
@@ -22,7 +32,10 @@
     "url": "https://github.com/kaelzhang/node-githuburl/issues"
   },
   "devDependencies": {
-    "mocha": "~1.13.0",
-    "chai": "~1.8.0"
+    "mocha": "^1.13.0",
+    "chai": "^1.8.0"
+  },
+  "dependencies": {
+    "ssh-url": "^0.1.3"
   }
 }
