--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "githuburl",
-  "version": "0.1.0",
-  "description": "Parse a github repo url into an object of repo information and switch to several types of clone URL. ",
+  "version": "0.1.1",
+  "description": "Parse a github repo url into an object of repo information and convert to several types of clone URL. ",
   "main": "index.js",
   "scripts": {
     "test": "make test"
@@ -14,7 +14,9 @@
     "ssh",
     "git",
     "https",
-    "user"
+    "user",
+    "clone",
+    "clone-url"
   ],
   "repository": {
     "type": "git",
