--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "githuburl",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Parse a github repo url into an object of repo information and convert to several types of clone URL. ",
   "main": "index.js",
   "scripts": {
     "test": "make test"
   },
   "keywords": [
+    "github-url",
     "github",
     "repo",
     "object",
